# Alconna-Avilla

./: .gitmodules  README.md  avilla_saya_main.py  avilla_saya_module.py  pyproject.toml  script.py
arclet/alconna/avilla/: __init__.py  alc.py  argv.py  create.py  dispatcher.py  model.py  saya.py  tools.py  typings.py  utils.py
arclet/alconna/avilla/i18n/: .config.json  .lang.schema.json  .template.json  en-US.json  model.py  zh-CN.json
src/arclet/alconna/avilla/: __init__.py  adapter.py  argv.py  create.py  dispatcher.py  model.py  saya.py  tools.py  typings.py  utils.py
src/arclet/alconna/avilla/i18n/: .config.json
