[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "arclet-alconna-avilla"
version = "0.19.1"
description = "Support Alconna for GraiaProject/Avilla"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "arclet-alconna<2.0.0, >=1.8.12",
    "arclet-alconna-tools<0.8.0, >=0.7.4",
    "tarina>=0.5.0",
    "nepattern<0.8.0, >=0.7.3",
    "graia-amnesia>=0.5.0",
    "graia-broadcast>=0.18.2",
    "graia-saya>=0.0.17",
    "avilla-core>=1.0.0a20",
    "launart>=0.5.0",
    "creart>=0.3.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}

[project.entry-points."creart.creators"]
alconna_avilla_behavior = "arclet.alconna.avilla.create:AlconnaBehaviorCreator"


[tool]
[tool.pdm]
[tool.pdm.build]
includes = ["arclet/alconna"]

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.4.2",
    "avilla-onebot-v11>=1.0.0a28",
]

[tool.pdm.scripts]
pre_build = {call = "script:pre_build"}
post_build = {call = "script:post_build"}


[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extra_standard_library = ["typing_extensions"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"
disableBytesTypePromotions = true
